baml_language/crates/baml_tests/snapshots/stream_expansion/baml_tests__stream_expansion__01_lexer__attributes.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Stream"
Word "expansion"
Word "with"
Word "user-specified"
Word "streaming"
Word "attributes"
Dot "."
Class "class"
Word "WithStartsAs"
LBrace "{"
Slash "/"
Slash "/"
At "@"
Word "stream"
Dot "."
Word "starts_as"
LParen "("
Quote "\""
Quote "\""
RParen ")"
Error "→"
Word "S"
Equals "="
Quote "\""
Quote "\""
Comma ","
Word "D"
Equals "="
Word "string"
Error "→"
Quote "\""
Quote "\""
Pipe "|"
Word "string"
Word "loading_name"
Word "string"
At "@"
Word "stream"
Dot "."
Word "starts_as"
LParen "("
Quote "\""
Quote "\""
RParen ")"
Slash "/"
Slash "/"
At "@"
Word "stream"
Dot "."
Word "starts_as"
LParen "("
Word "null"
RParen ")"
Error "→"
Word "explicit"
Word "null"
LParen "("
Word "same"
Word "as"
Word "default"
For "for"
Word "scalar"
RParen ")"
Word "explicit_null"
Word "string"
At "@"
Word "stream"
Dot "."
Word "starts_as"
LParen "("
Word "null"
RParen ")"
Slash "/"
Slash "/"
At "@"
Word "stream"
Dot "."
Word "starts_as"
LParen "("
Word "never"
RParen ")"
Error "→"
Word "S"
Equals "="
Word "never"
Error "→"
Word "field"
Word "absent"
Word "until"
Word "starts"
Error "→"
Word "just"
Word "string"
Word "absent_until_start"
Word "string"
At "@"
Word "stream"
Dot "."
Word "starts_as"
LParen "("
Word "never"
RParen ")"
RBrace "}"
Class "class"
Word "WithStreamType"
LBrace "{"
Slash "/"
Slash "/"
At "@"
Word "stream"
Dot "."
Word "type"
LParen "("
Word "never"
RParen ")"
Error "→"
Word "D"
Equals "="
Word "never"
Error "→"
Word "field"
Word "omitted"
Word "entirely"
Word "omitted_field"
Quote "\""
Word "resume"
Quote "\""
At "@"
Word "stream"
Dot "."
Word "type"
LParen "("
Word "never"
RParen ")"
Slash "/"
Slash "/"
Word "Normal"
Word "field"
Word "next"
Word "to"
Word "the"
Word "omitted"
Word "one"
Word "name"
Word "string"
RBrace "}"
Class "class"
Word "WithSapFlags"
LBrace "{"
Slash "/"
Slash "/"
At "@"
Word "sap"
Dot "."
Word "completed"
Word "on"
Word "a"
Word "literal"
Word "type"
Quote "\""
Word "resume"
Quote "\""
At "@"
Word "sap"
Dot "."
Word "completed"
Slash "/"
Slash "/"
At "@"
Word "sap"
Dot "."
Word "must_start"
Error "→"
Word "S"
Equals "="
Word "never"
Error "→"
Word "absent"
Word "until"
Word "parsing"
Word "begins"
Word "name"
Word "string"
At "@"
Word "sap"
Dot "."
Word "must_start"
Slash "/"
Slash "/"
At "@"
Word "stream"
Dot "."
Word "with_state"
Word "flag"
Word "carried"
Word "to"
Word "generated"
Word "field"
Word "status"
Word "string"
At "@"
Word "stream"
Dot "."
Word "with_state"
RBrace "}"
Class "class"
Word "CombinedAttributes"
LBrace "{"
Slash "/"
Slash "/"
At "@"
Word "stream"
Dot "."
Word "starts_as"
LParen "("
Quote "\""
Quote "\""
RParen ")"
Plus "+"
At "@"
Word "stream"
Dot "."
Word "with_state"
Word "name"
Word "string"
At "@"
Word "stream"
Dot "."
Word "starts_as"
LParen "("
Quote "\""
Quote "\""
RParen ")"
At "@"
Word "stream"
Dot "."
Word "with_state"
Slash "/"
Slash "/"
Word "No"
Word "attributes"
LParen "("
Word "default"
Word "expansion"
For "for"
Word "comparison"
RParen ")"
Word "plain"
Word "string"
RBrace "}"
