baml_language/crates/baml_tests/snapshots/stream_expansion/baml_tests__stream_expansion__01_lexer__base_types.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Shared"
Word "type"
Word "definitions"
Word "used"
Word "by"
Word "other"
Word "files"
In "in"
Word "this"
Test "test"
Word "project"
Dot "."
Slash "/"
Slash "/"
Word "Named"
Quote "\""
Word "base_types"
Quote "\""
Word "so"
Word "it"
Word "sorts"
Word "alphabetically"
Word "before"
Word "other"
Word "files"
Dot "."
Enum "enum"
Word "Status"
LBrace "{"
Word "Active"
Word "Inactive"
RBrace "}"
Class "class"
Word "Education"
LBrace "{"
Word "school"
Word "string"
Word "degree"
Word "string"
RBrace "}"
