baml_language/crates/baml_tests/snapshots/stream_expansion/baml_tests__stream_expansion__01_lexer__classes.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Test"
Word "stream"
Word "expansion"
For "for"
Word "class-referencing"
Word "fields"
Dot "."
Slash "/"
Slash "/"
Word "Expected"
Colon ":"
Class "class"
Word "fields"
Word "get"
Word "null"
Pipe "|"
Word "stream_ClassName"
Dot "."
Class "class"
Word "Inner"
LBrace "{"
Word "value"
Word "string"
RBrace "}"
Class "class"
Word "Outer"
LBrace "{"
Word "inner"
Word "Inner"
RBrace "}"
