baml_language/crates/baml_tests/snapshots/stream_expansion/baml_tests__stream_expansion__01_lexer__collections.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Test"
Word "stream"
Word "expansion"
For "for"
Word "lists"
Comma ","
Word "maps"
Comma ","
Word "and"
Word "nested"
Word "collections"
Dot "."
Slash "/"
Slash "/"
Word "Expected"
Colon ":"
Word "list"
Word "fields"
Word "get"
Word "never"
LBracket "["
RBracket "]"
Pipe "|"
Word "expanded_element_type"
LBracket "["
RBracket "]"
Dot "."
Slash "/"
Slash "/"
Word "Expected"
Colon ":"
Word "map"
Word "fields"
Word "get"
Word "map"
Less "<"
Word "K"
Comma ","
Word "never"
Greater ">"
Pipe "|"
Word "map"
Less "<"
Word "K"
Comma ","
Word "expanded_value_type"
Greater ">"
Dot "."
Slash "/"
Slash "/"
Word "Note"
Colon ":"
Word "the"
Word "never"
LBracket "["
RBracket "]"
Word "and"
Word "map"
Less "<"
Word "K"
Comma ","
Word "never"
Greater ">"
Word "are"
Word "sentinels"
For "for"
Word "empty"
Word "containers"
Dot "."
Class "class"
Word "WithLists"
LBrace "{"
Word "strings"
Word "string"
LBracket "["
RBracket "]"
Word "ints"
Word "int"
LBracket "["
RBracket "]"
Word "classes"
Word "Inner"
LBracket "["
RBracket "]"
RBrace "}"
Class "class"
Word "WithMaps"
LBrace "{"
Word "simple"
Word "map"
Less "<"
Word "string"
Comma ","
Word "int"
Greater ">"
Word "complex"
Word "map"
Less "<"
Word "string"
Comma ","
Word "Inner"
Greater ">"
RBrace "}"
Class "class"
Word "WithNested"
LBrace "{"
Word "matrix"
Word "int"
LBracket "["
RBracket "]"
LBracket "["
RBracket "]"
Word "class_matrix"
Word "Inner"
LBracket "["
RBracket "]"
LBracket "["
RBracket "]"
Word "nested_map"
Word "map"
Less "<"
Word "string"
Comma ","
Word "int"
LBracket "["
RBracket "]"
Greater ">"
Word "class_nested_map"
Word "map"
Less "<"
Word "string"
Comma ","
Word "Inner"
LBracket "["
RBracket "]"
Greater ">"
RBrace "}"
