baml_language/crates/baml_tests/snapshots/stream_expansion/baml_tests__stream_expansion__01_lexer__cross_file.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Cross-file"
Word "type"
Word "references"
Colon ":"
Word "uses"
Word "Education"
Word "and"
Word "Status"
Word "from"
Word "defaults"
Dot "."
Word "baml"
Dot "."
Slash "/"
Slash "/"
Word "Verifies"
Word "stream"
Word "expansion"
Word "works"
Word "across"
Word "file"
Word "boundaries"
Dot "."
Class "class"
Word "CrossFileUser"
LBrace "{"
Word "name"
Word "string"
Word "edu"
Word "Education"
Word "status"
Word "Status"
RBrace "}"
Word "type"
Word "CrossFileAlias"
Equals "="
Word "Education"
Pipe "|"
Word "int"
