baml_language/crates/baml_tests/snapshots/stream_expansion/baml_tests__stream_expansion__01_lexer__defaults.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Stream"
Word "expansion"
Word "default"
Word "rules"
Minus "-"
Word "no"
Word "user"
Word "attributes"
Dot "."
Slash "/"
Slash "/"
Word "Uses"
Word "Education"
Word "and"
Word "Status"
Word "from"
Word "base_types"
Dot "."
Word "baml"
Dot "."
Slash "/"
Slash "/"
Word "Tests"
Colon ":"
Word "primitives"
Comma ","
Class "class"
Word "ref"
Comma ","
Enum "enum"
Word "ref"
Comma ","
Word "containers"
Comma ","
Word "unions"
Comma ","
Word "literals"
Comma ","
Word "optional"
Class "class"
Word "DefaultExpansion"
LBrace "{"
Slash "/"
Slash "/"
Word "Primitives"
Colon ":"
Error "→"
Word "null"
Pipe "|"
Word "T"
Word "name"
Word "string"
Word "count"
Word "int"
Word "score"
Word "float"
Word "flag"
Word "bool"
Slash "/"
Slash "/"
Word "Enum"
Word "ref"
Colon ":"
Error "→"
Word "null"
Pipe "|"
Word "Status"
LParen "("
Word "no"
Word "stream"
Dot "."
Word "prefix"
Word "on"
Word "enums"
RParen ")"
Word "status"
Word "Status"
Slash "/"
Slash "/"
Word "Class"
Word "ref"
Colon ":"
Error "→"
Word "null"
Pipe "|"
Word "stream"
Dot "."
Word "Education"
Word "edu"
Word "Education"
Slash "/"
Slash "/"
Word "List"
Word "of"
Word "primitives"
Colon ":"
Error "→"
Word "string"
LBracket "["
RBracket "]"
LParen "("
Word "no"
Word "null"
Comma ","
Word "starts"
Word "empty"
RParen ")"
Word "tags"
Word "string"
LBracket "["
RBracket "]"
Slash "/"
Slash "/"
Word "List"
Word "of"
Word "classes"
Colon ":"
Error "→"
Word "stream"
Dot "."
Word "Education"
LBracket "["
RBracket "]"
LParen "("
Word "no"
Word "null"
RParen ")"
Word "education"
Word "Education"
LBracket "["
RBracket "]"
Slash "/"
Slash "/"
Word "Map"
Colon ":"
Error "→"
Word "map"
Less "<"
Word "string"
Comma ","
Word "int"
Greater ">"
LParen "("
Word "no"
Word "null"
Comma ","
Word "starts"
Word "empty"
RParen ")"
Word "metadata"
Word "map"
Less "<"
Word "string"
Comma ","
Word "int"
Greater ">"
Slash "/"
Slash "/"
Word "Map"
Word "with"
Class "class"
Word "value"
Colon ":"
Error "→"
Word "map"
Less "<"
Word "string"
Comma ","
Word "stream"
Dot "."
Word "Education"
Greater ">"
LParen "("
Word "no"
Word "null"
RParen ")"
Word "nested_map"
Word "map"
Less "<"
Word "string"
Comma ","
Word "Education"
Greater ">"
Slash "/"
Slash "/"
Word "Union"
Colon ":"
Error "→"
Word "null"
Pipe "|"
Word "int"
Pipe "|"
Word "string"
Word "value"
Word "int"
Pipe "|"
Word "string"
Slash "/"
Slash "/"
Word "Union"
Word "with"
Class "class"
Colon ":"
Error "→"
Word "null"
Pipe "|"
Word "stream"
Dot "."
Word "Education"
Pipe "|"
Word "int"
Word "mixed"
Word "Education"
Pipe "|"
Word "int"
Slash "/"
Slash "/"
Word "Optional"
Colon ":"
Error "→"
Word "string"
Pipe "|"
Word "null"
Word "opt"
Word "string"
Question "?"
Slash "/"
Slash "/"
Word "Optional"
Class "class"
Colon ":"
Error "→"
Word "stream"
Dot "."
Word "Education"
Pipe "|"
Word "null"
Word "opt_edu"
Word "Education"
Question "?"
Slash "/"
Slash "/"
Word "String"
Word "literal"
Colon ":"
Error "→"
Quote "\""
Word "resume"
Quote "\""
LParen "("
Word "S"
Equals "="
Word "never"
Comma ","
Word "literal"
Word "passthrough"
RParen ")"
Word "tag"
Quote "\""
Word "resume"
Quote "\""
Slash "/"
Slash "/"
Word "Int"
Word "literal"
Colon ":"
Error "→"
IntegerLiteral "42"
LParen "("
Word "S"
Equals "="
Word "never"
RParen ")"
Word "code"
IntegerLiteral "42"
Slash "/"
Slash "/"
Word "Bool"
Word "literal"
Colon ":"
Error "→"
Word "true"
LParen "("
Word "S"
Equals "="
Word "never"
RParen ")"
Word "yes"
Word "true"
RBrace "}"
Slash "/"
Slash "/"
Word "Nested"
Word "containers"
Class "class"
Word "NestedContainers"
LBrace "{"
Slash "/"
Slash "/"
Word "Nested"
Word "list"
Colon ":"
Error "→"
Word "stream"
Dot "."
Word "Education"
LBracket "["
RBracket "]"
LBracket "["
RBracket "]"
LParen "("
Word "no"
Word "null"
RParen ")"
Word "matrix"
Word "Education"
LBracket "["
RBracket "]"
LBracket "["
RBracket "]"
Slash "/"
Slash "/"
Word "Map"
Word "of"
Word "lists"
Colon ":"
Error "→"
Word "map"
Less "<"
Word "string"
Comma ","
Word "stream"
Dot "."
Word "Education"
LBracket "["
RBracket "]"
Greater ">"
Word "map_of_lists"
Word "map"
Less "<"
Word "string"
Comma ","
Word "Education"
LBracket "["
RBracket "]"
Greater ">"
Slash "/"
Slash "/"
Word "List"
Word "of"
Word "maps"
Colon ":"
Error "→"
Word "map"
Less "<"
Word "string"
Comma ","
Word "stream"
Dot "."
Word "Education"
Greater ">"
LBracket "["
RBracket "]"
Word "list_of_maps"
Word "map"
Less "<"
Word "string"
Comma ","
Word "Education"
Greater ">"
LBracket "["
RBracket "]"
RBrace "}"
Slash "/"
Slash "/"
Word "Recursive"
Word "type"
Class "class"
Word "TreeNode"
LBrace "{"
Word "label"
Word "string"
Word "children"
Word "TreeNode"
LBracket "["
RBracket "]"
RBrace "}"
Slash "/"
Slash "/"
Word "Dynamic"
Class "class"
Word "should"
Word "still"
Word "get"
Word "stream"
Dot "."
Star "*"
Word "variant"
Class "class"
Word "DynamicClass"
LBrace "{"
Word "name"
Word "string"
AtAt "@@"
Dynamic "dynamic"
RBrace "}"
Slash "/"
Slash "/"
Word "Type"
Word "aliases"
Word "should"
Word "get"
Word "stream"
Dot "."
Star "*"
Word "variants"
Word "type"
Word "AliasUnion"
Equals "="
Word "Education"
Pipe "|"
Word "string"
Word "type"
Word "AliasArray"
Equals "="
Word "Education"
LBracket "["
RBracket "]"
Word "type"
Word "AliasPrimitive"
Equals "="
Word "int"
