baml_language/crates/baml_tests/snapshots/stream_expansion/baml_tests__stream_expansion__01_lexer__desugaring.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Test"
Word "legacy"
Word "attribute"
Word "desugaring"
Dot "."
Slash "/"
Slash "/"
At "@"
Word "stream"
Dot "."
Word "done"
Error "→"
Word "D"
Equals "="
Word "original_type"
LParen "("
Word "not"
Word "stream-expanded"
RParen ")"
Comma ","
Word "has_completed"
Word "flag"
Slash "/"
Slash "/"
At "@"
Word "stream"
Dot "."
Word "not_null"
Error "→"
Word "S"
Equals "="
Word "never"
LParen "("
Word "field"
Word "absent"
Word "until"
Word "starts"
RParen ")"
Slash "/"
Slash "/"
At "@"
Word "stream"
Dot "."
Word "starts_as"
Error "→"
Word "explicit"
Word "S"
Word "value"
Slash "/"
Slash "/"
At "@"
Word "stream"
Dot "."
Word "type"
Error "→"
Word "explicit"
Word "D"
Word "value"
Class "class"
Word "WithDesugaring"
LBrace "{"
Slash "/"
Slash "/"
At "@"
Word "stream"
Dot "."
Word "done"
Word "on"
Word "string"
Colon ":"
Word "D"
Equals "="
Word "string"
LParen "("
Word "original"
RParen ")"
Comma ","
Word "S"
Equals "="
Word "null"
Error "→"
Word "null"
Pipe "|"
Word "string"
Word "done_string"
Word "string"
At "@"
Word "stream"
Dot "."
Word "done"
Slash "/"
Slash "/"
At "@"
Word "stream"
Dot "."
Word "not_null"
Word "on"
Word "string"
Colon ":"
Word "S"
Equals "="
Word "never"
Comma ","
Word "D"
Equals "="
Word "string"
Error "→"
Word "string"
Word "not_null_string"
Word "string"
At "@"
Word "stream"
Dot "."
Word "not_null"
Slash "/"
Slash "/"
At "@"
Word "stream"
Dot "."
Word "not_null"
Word "on"
Class "class"
Colon ":"
Word "S"
Equals "="
Word "never"
Comma ","
Word "D"
Equals "="
Word "stream_Inner"
Error "→"
Word "stream_Inner"
Word "not_null_class"
Word "Inner"
At "@"
Word "stream"
Dot "."
Word "not_null"
Slash "/"
Slash "/"
At "@"
Word "stream"
Dot "."
Word "done"
Plus "+"
At "@"
Word "stream"
Dot "."
Word "not_null"
Colon ":"
Word "D"
Equals "="
Word "original_type"
Comma ","
Word "S"
Equals "="
Word "never"
Error "→"
Word "original_type"
Word "done_and_not_null"
Word "string"
At "@"
Word "stream"
Dot "."
Word "done"
At "@"
Word "stream"
Dot "."
Word "not_null"
Slash "/"
Slash "/"
At "@"
Word "stream"
Dot "."
Word "type"
LParen "("
Word "never"
RParen ")"
Word "on"
Word "string"
Colon ":"
Word "D"
Equals "="
Word "never"
Comma ","
Word "S"
Equals "="
Word "null"
Error "→"
Word "null"
Word "type_never"
Word "string"
At "@"
Word "stream"
Dot "."
Word "type"
LParen "("
Word "never"
RParen ")"
Slash "/"
Slash "/"
At "@"
Word "stream"
Dot "."
Word "type"
LParen "("
Word "never"
RParen ")"
Word "on"
Word "literal"
Colon ":"
Word "D"
Equals "="
Word "never"
Comma ","
Word "S"
Equals "="
Word "never"
Error "→"
Word "field"
Word "omitted"
Word "type_never_literal"
Quote "\""
Word "resume"
Quote "\""
At "@"
Word "stream"
Dot "."
Word "type"
LParen "("
Word "never"
RParen ")"
RBrace "}"
