baml_language/crates/baml_tests/snapshots/stream_expansion/baml_tests__stream_expansion__01_lexer__dynamic.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Test"
Word "stream"
Word "expansion"
Word "with"
AtAt "@@"
Dynamic "dynamic"
Word "classes"
Dot "."
Slash "/"
Slash "/"
Word "Expected"
Colon ":"
Word "stream_DynamicClass"
Word "is"
Word "also"
Word "marked"
AtAt "@@"
Dynamic "dynamic"
Dot "."
Class "class"
Word "DynamicClass"
LBrace "{"
Word "name"
Word "string"
AtAt "@@"
Dynamic "dynamic"
RBrace "}"
