baml_language/crates/baml_tests/snapshots/stream_expansion/baml_tests__stream_expansion__01_lexer__enums.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Test"
Word "stream"
Word "expansion"
For "for"
Enum "enum"
Word "fields"
Dot "."
Slash "/"
Slash "/"
Word "Expected"
Colon ":"
Enum "enum"
Word "fields"
Word "get"
Word "null"
Pipe "|"
Word "EnumName"
LParen "("
Word "NOT"
Word "stream_EnumName"
RParen ")"
Dot "."
Enum "enum"
Word "Status"
LBrace "{"
Word "Active"
Word "Inactive"
RBrace "}"
Class "class"
Word "WithEnum"
LBrace "{"
Word "status"
Word "Status"
RBrace "}"
