baml_language/crates/baml_tests/snapshots/stream_expansion/baml_tests__stream_expansion__01_lexer__literals.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Test"
Word "stream"
Word "expansion"
For "for"
Word "literal"
Word "types"
Dot "."
Slash "/"
Slash "/"
Word "Expected"
Colon ":"
Word "literal"
Word "fields"
Word "get"
Word "S"
Equals "="
Word "never"
Comma ","
Word "D"
Equals "="
Word "T"
Comma ","
Word "so"
Word "simplify"
LParen "("
Word "never"
Pipe "|"
Word "T"
RParen ")"
Equals "="
Word "T"
Dot "."
Class "class"
Word "WithLiterals"
LBrace "{"
Word "type"
Quote "\""
Word "resume"
Quote "\""
Word "version"
IntegerLiteral "1"
Word "enabled"
Word "true"
RBrace "}"
