baml_language/crates/baml_tests/snapshots/stream_expansion/baml_tests__stream_expansion__01_lexer__primitives.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Test"
Word "stream"
Word "expansion"
For "for"
Word "primitive"
Word "types"
Dot "."
Slash "/"
Slash "/"
Word "Expected"
Colon ":"
Word "each"
Word "field"
In "in"
Word "stream_Primitives"
Word "gets"
Word "null"
Pipe "|"
Word "T"
Dot "."
Class "class"
Word "Primitives"
LBrace "{"
Word "name"
Word "string"
Word "count"
Word "int"
Word "flag"
Word "bool"
Word "score"
Word "float"
RBrace "}"
