baml_language/crates/baml_tests/snapshots/stream_expansion/baml_tests__stream_expansion__01_lexer__type_aliases.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Test"
Word "stream"
Word "expansion"
For "for"
Word "type"
Word "alias"
Word "definitions"
Word "and"
Word "fields"
Word "referencing"
Word "them"
Dot "."
Slash "/"
Slash "/"
Word "Expected"
Colon ":"
Word "type"
Word "alias"
Word "bodies"
Word "are"
Word "stream-expanded"
LParen "("
Word "classes"
Word "get"
Word "stream_"
Word "prefix"
RParen ")"
Dot "."
Slash "/"
Slash "/"
Word "Expected"
Colon ":"
Word "fields"
Word "of"
Word "alias"
Word "type"
Word "get"
Word "null"
Pipe "|"
Word "stream_AliasName"
Dot "."
Word "type"
Word "SimpleAlias"
Equals "="
Word "string"
Word "type"
Word "ClassAlias"
Equals "="
Word "Inner"
Word "type"
Word "UnionAlias"
Equals "="
Word "int"
Pipe "|"
Word "Inner"
Word "type"
Word "OptionalAlias"
Equals "="
Word "Inner"
Question "?"
